--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,6 @@
 <head>
 </head>
 <body>
-    <button class="btn btn-success" onclick="alert('ya se tregistro la entrada')">Bienvenidos</button> 
+    <button class="btn btn-success" onclick="alert('Hola y bienvenido... que chin... a su madre el america')">Bienvenidos</button> 
 </body>
 </html>
